# carbon-simd

./: Cargo.toml  README.md
src/: lib.rs  main.rs  x86_64.rs
src/x86_64/: floating.rs  integer.rs  num.rs
