[package]
name = "carbon-simd"
version = "0.1.0"
edition = "2024"
authors = ["kntt32 <knt.t@outlook.com>"]
license = "MIT"
description = "SIMD utilities written with Rust (fularuen project)"
readme = "README.md"
repository = "https://github.com/kntt32/carbon-simd"
homepage = "https://github.com/kntt32/carbon-simd"
keywords = ["simd", "vector", "fularuen", "avx", "avx2", "x64", "x86_64"]
categories = ["math", "science"]
documentation = "https://docs.rs/carbon-simd"

[dependencies]
num-traits = "0.2.19"
