[package]
name = "carbon-simd"
version = "0.1.0"
edition = "2024"
authors = ["kntt32 <knt.t@outlook.com>"]
license = "MIT"
description = "SIMD utilities written with Rust (fularuen project)"
readme = "README.md"
repository = "https://github.com/kntt32/carbon-simd"
homepage = "https://github.com/kntt32/carbon-simd"
keywords = ["simd", "vector", "avx", "avx2", "fularuen"]
categories = ["mathematics", "science"]
documentation = "https://docs.rs/carbon-simd"

[dependencies]
num-traits = "0.2.19"
